# same

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
docs/: hallazgos.md  plan-analisis.md
migrations/: 001_init.sql  002_dimensiones.sql  003_dependencias.sql  003_ubicaciones.sql  004_relacional_y_analisis.sql  005_comuna.sql
notebooks/: hallazgos.ipynb  hallazgos.py
src/same/: __main__.py  anonymize.py  db.py  enrich.py  extract.py  geocode.py  logging_config.py  redact_names.py  transform.py
tests/: conftest.py  test_anonymize.py  test_extract.py  test_geocode.py  test_redact_names.py
