[project]
name = "same"
version = "0.1.0"
description = "Análisis de intervenciones del SAME en unidades penitenciarias y dependencias policiales, extraídas de tablas en PDF (desde 01/2022)."
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.2",
    "python-dotenv>=1.0",
    "pdfplumber>=0.11",
    "pandas>=2.2",
    "anthropic>=0.109.1",
]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.6", "pre-commit>=3.8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/same"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# E/F = pyflakes+pycodestyle, I = import sort, UP = pyupgrade,
# B = bugbear (real bugs), SIM = simplifications.
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
